Missing error codes in Swagger
